--- a/src/dropdownCheckboxes.css
+++ b/src/dropdownCheckboxes.css
@@ -1,16 +1,16 @@
-.cq-dropdown .btn-default {
+.dropdownCheckboxes .btn-default {
   max-width: 150px;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.cq-dropdown ul.dropdown-menu li {
+.dropdownCheckboxes ul.dropdown-menu li {
   font-size: 80%;
   margin: 1px 10px;
 }
-.cq-dropdown ul.dropdown-menu label {
+.dropdownCheckboxes ul.dropdown-menu label {
   font-weight: normal;
 }
-.cq-dropdown ul.dropdown-menu button {
+.dropdownCheckboxes ul.dropdown-menu button {
   display: inline-block;
   margin: 6px 0 0 0;
   font-size: 90%
