--- a/src/dropdownCheckboxes.css
+++ b/src/dropdownCheckboxes.css
@@ -15,3 +15,9 @@
   margin: 6px 0 0 0;
   font-size: 90%
 }
+
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
